--- a/website/blog/2016-04-12-jest-11.md
+++ b/website/blog/2016-04-12-jest-11.md
@@ -69,7 +69,7 @@ And `jest.fn` was added to make it easier to create mock functions:
 // Create a mock function
 const mockFn = jest.fn(() => 42);
 mockFn(); // 42
-expect(mockFn.calls).toHaveLength(1);
+expect(mockFn.calls.length).toBe(1);
 ```
 
 #### Performance
