--- a/website/blog/2016-09-01-jest-15.md
+++ b/website/blog/2016-09-01-jest-15.md
@@ -65,7 +65,7 @@ const React1 = require('react');
 jest.resetModules();
 const React2 = require('react');
 
-React1 !== React2 // These two are separate copies of React.
+React1 !== React2; // These two are separate copies of React.
 ```
 
 The call to `resetModules` wipes away the require cache. A second call to require the same module will result in a new instantiation of the same module and all of its dependencies. This feature is especially useful when dealing with modules that have side effects, like [jest-haste-map](https://github.com/facebook/jest/blob/3bbf32a239fc4aad8cc6928a787f235bd86fecac/packages/jest-haste-map/src/__tests__/index-test.js#L64).
