--- a/website/blog/2016-04-12-jest-11.md
+++ b/website/blog/2016-04-12-jest-11.md
@@ -49,7 +49,7 @@ import LikeButton from 'LikeButton'; // LikeButton is properly unmocked!
 
 #### (Auto)Mocking Improvements
 
-We have made numerous improvements and bug fixes to Jest's automocking feature, improved npm3 support and added new manual mocking APIs. Many people have expressed a desire use Jest with the automocking feature disabled. A global configuration option [`automock`](/docs/api#automock-boolean), which can be set to `false`, was added.
+We have made numerous improvements and bug fixes to Jest's automocking feature, improved npm3 support and added new manual mocking APIs. Many people have expressed a desire to use Jest with the automocking feature disabled. A global configuration option [`automock`](/docs/api#automock-boolean), which can be set to `false`, was added.
 
 We have also added two new APIs to simplify manual mocks. `jest.mock` specifies a manual mock factory for a specific test:
 
