--- a/website/blog/2022-04-25-jest-28.md
+++ b/website/blog/2022-04-25-jest-28.md
@@ -27,7 +27,7 @@ Now let's talk about the new features in Jest 28, which is way more exciting! An
 
 ### Sharding of test run
 
-Jest now includes a new [`--shard`](/docs/cli#--shard) CLI option, contributed by [Mario Nebl](https://github.com/marionebl). It allows you to run parts of your test across different machine, and has been one of Jest's oldest feature requests.
+Jest now includes a new [`--shard`](/docs/cli#--shard) CLI option, contributed by [Mario Nebl](https://github.com/marionebl). It allows you to run parts of your test across different machines, and has been one of Jest's oldest feature requests.
 
 Jest's own test suite on CI went from about 10 minutes to 3 on Ubuntu, and on Windows from 20 minutes to 7.
 
